--- a/README.Rmd
+++ b/README.Rmd
@@ -19,7 +19,22 @@ The goal of `mscstts` is to provide an R Client for the Microsoft Cognitive Serv
 
 See the documentation here: https://docs.microsoft.com/en-us/azure/cognitive-services/speech/home
 
-You can get a TTS API key here: https://azure.microsoft.com/en-us/try/cognitive-services/.  The API you need to get one from is Bing Speech.
+## Getting an API key
+
+You can get a TTS API key here: https://azure.microsoft.com/en-us/try/cognitive-services/.  The API you need to get one from is Bing Speech. (This will be deprecated! See below)
+
+1.  Create an Azure account
+2.  Go to https://portal.azure.com/#create/Microsoft.CognitiveServicesSpeechServices.  If that works, skip to step 5.
+3.  Go to https://portal.azure.com/#home
+4. Click `+ Create a Resource`
+5. Search "Speech"
+6. Hit `+ Create`
+7. Should be able to create an F0 account (which is free - see below) if you hit the pricing tiers
+
+```{r, echo = FALSE, width = "10%"}
+knitr::include_graphics("f0.png")
+```
+
 
 ## Installation
 
