--- a/README.Rmd
+++ b/README.Rmd
@@ -21,7 +21,7 @@ See the documentation here: https://docs.microsoft.com/en-us/azure/cognitive-ser
 
 ## Getting an API key
 
-You can get a TTS API key here: https://azure.microsoft.com/en-us/try/cognitive-services/.  The API you need to get one from is Bing Speech. (This will be deprecated! See below)
+You can get a TTS API key here: https://azure.microsoft.com/en-us/try/cognitive-services/.  The API you need to get one from is Cognitive Services, Speech.
 
 1.  Create an Azure account
 2.  Go to https://portal.azure.com/#create/Microsoft.CognitiveServicesSpeechServices.  If that works, skip to step 5.
@@ -34,6 +34,15 @@ You can get a TTS API key here: https://azure.microsoft.com/en-us/try/cognitive-
 ```{r, echo = FALSE, width = "10%"}
 knitr::include_graphics("man/figures/README-f0.png")
 ```
+
+### Setting up your API key
+
+You can set up your API key in a number of ways (where `XXX` is your API key):
+
+1. Edit `~/.Renviron` and set `MS_TTS_API_KEY = "XXXX"`
+2. In `R`, use `options(ms_tts_key = "XXXX")`.
+3. Set `export MS_TTS_API_KEY=XXXX` in `.bash_profile`/`.bashrc` if you're using `R` in the terminal.
+4. Pass `api_key = "XXXX"` in arguments of functions such as `ms_list_voices(api_key = "XXXX")`.
 
 
 ## Installation
