--- a/README.Rmd
+++ b/README.Rmd
@@ -2,8 +2,9 @@
 output: github_document
 ---
 
-[![Travis build status](https://travis-ci.com/muschellij2/mscstts.svg?branch=master)](https://travis-ci.com/muschellij2/mscstts)
-[![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/muschellij2/mscstts?branch=master&svg=true)](https://ci.appveyor.com/project/muschellij2/mscstts)
+  <!-- badges: start -->
+  [![R-CMD-check](https://github.com/muschellij2/mscstts/workflows/R-CMD-check/badge.svg)](https://github.com/muschellij2/mscstts/actions)
+  <!-- badges: end -->
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
 ```{r setup, include = FALSE}
@@ -14,7 +15,7 @@ knitr::opts_chunk$set(
 )
 ```
 # mscstts Package: 
-The goal of `mscstts` is to provide an R Client for the Microsoft Cognitive Services Text to Speech REST API, including voice synthesis. A valid account MUST be registered at the Microsoft Cognitive Services website <https://azure.microsoft.com/en-us/services/cognitive-services/> in order to obtain a (free) API key. Without an API key, this package will not work properly.
+The goal of `mscstts` is to provide an R Client for the Microsoft Cognitive Services Text to Speech REST API, including voice synthesis. A valid account MUST be registered at the Microsoft Cognitive Services website <https://azure.microsoft.com/en-us/free/cognitive-services/> in order to obtain a (free) API key. Without an API key, this package will not work properly.
 
 See the documentation here: https://docs.microsoft.com/en-us/azure/cognitive-services/speech-service/overview
 
