added new url for jhudsl

--- a/README.Rmd
+++ b/README.Rmd
@@ -3,8 +3,8 @@ output: github_document
 ---
 
 <!-- badges: start -->
-[![R-CMD-check](https://github.com/muschellij2/mscstts/workflows/R-CMD-check/badge.svg)](https://github.com/muschellij2/mscstts/actions)
-[![R-CMD-check](https://github.com/muschellij2/mscstts/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/muschellij2/mscstts/actions/workflows/R-CMD-check.yaml)
+[![R-CMD-check](https://github.com/jhudsl/mscstts/workflows/R-CMD-check/badge.svg)](https://github.com/jhudsl/mscstts/actions)
+[![R-CMD-check](https://github.com/jhudsl/mscstts/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/jhudsl/mscstts/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
 ```{r setup, include = FALSE}
@@ -51,7 +51,7 @@ You can install `mscstts` from GitHub with:
 
 ```{r gh-installation, eval = FALSE}
 # install.packages("remotes")
-remotes::install_github("muschellij2/mscstts")
+remotes::install_github("jhudsl/mscstts")
 ```
 
 
